--- a/miniprogram/pages/map/index.wxml
+++ b/miniprogram/pages/map/index.wxml
@@ -1,5 +1,5 @@
 <!--miniprogram/pages/map/index.wxml-->
-<map
+<!-- <map
       id="myMap"
       style="width: 100%; height: 100vh;"
       latitude="{{latitude}}"
@@ -7,4 +7,17 @@
       markers="{{markers}}"
       polyline="{{polyline}}"
       show-location
-    ></map>
+    ></map> -->
+
+
+
+
+<!--地图容器-->
+ <map
+   id="myMap"
+   style="width: 100%; height: 100vh;"
+   longitude="{{longitude}}" latitude="{{latitude}}"
+   scale='16'
+   polyline="{{polyline}}"
+   markers="{{markers}}"
+ ></map>
